--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "firebase": "^7.8.0",
     "firebaseui": "^4.4.0",
     "google-maps-react": "^2.0.2",
+    "mapbox-gl": "^1.7.0",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-firebaseui": "^4.1.0",
+    "react-map-gl": "^5.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
