--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "firebase": "^7.8.0",
+    "firebase": "^7.8.1",
     "firebaseui": "^4.4.0",
     "google-maps-react": "^2.0.2",
     "mapbox-gl": "^1.7.0",
@@ -38,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "firestore-export-import": "^0.3.2"
   }
 }
