--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "deck.gl": "^8.0.15",
     "firebase": "^7.8.1",
     "firebaseui": "^4.4.0",
     "google-maps-react": "^2.0.2",
