--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-firebaseui": "^4.1.0",
     "react-map-gl": "^5.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "yr.no-forecast": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
